# social-backend/src/main/java/vn/pvhg/socialbackend/dto/request/RegisterRequest.java
@@ -1,15 +1,15 @@
 package vn.pvhg.socialbackend.dto.request;
 
+import jakarta.validation.constraints.Email;
 import jakarta.validation.constraints.NotBlank;
-import vn.pvhg.socialbackend.validation.annotation.EmailFieldValidation;
-import vn.pvhg.socialbackend.validation.annotation.RegisterRequestFormValidation;
+import jakarta.validation.constraints.Size;
 
-@RegisterRequestFormValidation
 public record RegisterRequest(
         @NotBlank(message = "Email is required")
-        @EmailFieldValidation
+        @Email(message = "Email is invalid")
         String email,
         @NotBlank(message = "Password is required")
+        @Size(min = 8, max = 30, message = "Password must be between 8 and 30 characters")
         String password,
         @NotBlank(message = "Password is required")
         String confirmPassword
